# assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.ops  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  readme.local
.github/workflows/: ci.yml
apps/desktop-web/: RELEASE.md  package-lock.json
apps/scheduler/: cron.py  heartbeat.py
backend/agent/: __init__.py  capabilities.py  ports.py
backend/app/: __init__.py  dependencies.py  main.py
backend/application/: __init__.py  conversation_memory.py  conversations.py  dispatch.py  memory_candidates.py  memory_release.py  memory_service.py  services.py  status_service.py  task_commands.py  task_events.py  task_lifecycle.py
backend/capabilities/: catalog.py
backend/common/: __init__.py
backend/domain/: __init__.py  account_connections.py  conversation_memory.py  conversations.py  memory_candidates.py  memory_release.py  models.py  services.py  task_events.py  task_lifecycle.py
backend/evaluation/: __init__.py  candidate_memory.py  experiments.py  governance.py  langfuse_runner.py  loader.py  memory_baseline.py  memory_release.py  memory_retrieval.py  metrics.py  models.py  rag_retrieval.py  runner.py
backend/features/: README.md  __init__.py  catalog.py  types.py
backend/infrastructure/: __init__.py  agent_ports.py  checkpoints.py  config.py  observability.py  repositories.py
backend/integrations/: __init__.py  account_backed.py  browser_sessions.py  connection_tester.py  credentials.py  notifications.py  providers.py
backend/knowledge/: __init__.py  extractors.py  service.py
backend/memory/: __init__.py  agentic.py  candidate_pipeline.py  consolidation.py  context.py  export.py  index_outbox.py  release.py  retrieval.py  safety.py  semantic.py  working_set.py
backend/migrations/: env.py
backend/model_gateway/: __init__.py  agent_model.py  chat_service.py  core.py  deepseek.py  openai_compatible.py  pool_factory.py  pools.py
backend/models/: agent_model.py  chat_service.py  core.py  deepseek.py  openai_compatible.py  pool_factory.py  pools.py  streaming.py
backend/notifications/: __init__.py  service.py
backend/observability/: __init__.py  core.py
backend/policies/: __init__.py  approval_requests.py  task_status.py  tool_approval.py
backend/rag/: __init__.py  citations.py  extractors.py  service.py
backend/runtime/: budget.py  compat.py  langgraph_approval_flow.py  langgraph_executor.py  langgraph_executor_core.py  langgraph_graph.py  langgraph_model_flow.py  langgraph_payloads.py  langgraph_review_flow.py  langgraph_runtime_helpers.py  langgraph_state.py  langgraph_tool_flow.py  loop.py  runner.py  runner_boundary.py  runner_default_executor.py  runner_events.py  runner_harness.py  runner_types.py  subagent_gateway.py
backend/scheduler/: __init__.py  cron.py  heartbeat.py
backend/session/: __init__.py  conversations.py  memory_blocks.py  summary.py  (+2 more)
docs/: mvp-startup-config.md  运行与API全量上手指南.md
migrations/: env.py
scripts/: __init__.py  browser_smoke.py  run_evaluation.py  run_memory_baseline.py  run_memory_release_gate.py  run_v12_governance_gate.py
(+481 files in other folders)
