[project]
name = "assistant-api"
version = "0.1.0"
description = "个人 Agent 助手系统后端"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "celery[redis]>=5.6.3,<6.0.0",
    "fastapi>=0.137.2,<0.138.0",
    "httpx>=0.28.1,<0.29.0",
    "orjson>=3.11.9,<4.0.0",
    "prometheus-client>=0.25.0,<0.26.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "pyjwt[crypto]>=2.13.0,<3.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "python-multipart>=0.0.32,<0.0.33",
    "redis>=6.4.0,<7.0.0",
    "sentry-sdk[fastapi]>=2.63.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.51,<3.0.0",
    "structlog>=26.1.0,<27.0.0",
    "tavily-python>=0.7.26,<0.8.0",
    "tenacity>=9.1.4,<10.0.0",
    "uvicorn[standard]>=0.49.0,<0.50.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.36.2,<3.0.0",
    "mypy>=2.1.0,<3.0.0",
    "pytest>=9.1.0,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "respx>=0.23.1,<0.24.0",
    "ruff>=0.15.17,<0.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]

[tool.mypy]
mypy_path = "apps/api"
